# rez-curl

./: CMakeLists.txt  README.md  build.sh  configure.sh  install.sh  package.py
